--- a/beer-service/application-local.properties
+++ b/beer-service/application-local.properties
@@ -1,6 +1,6 @@
-spring.datasource.username=beer_inventory_service
+spring.datasource.username=beer_service
 spring.datasource.password=password
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/beerinventoryservice?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/beerservice?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -21,7 +21,8 @@ spring.datasource.hikari.data-source-properties.maintainTimeStats=false
 
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
-#logging.level.root=DEBUG
+
+
 # Enable logging for config troubleshooting
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
